--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -25,13 +29,13 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
-    implementation 'com.facebook.fresco:fresco:1.12.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.google.code.gson:gson:2.8.2'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
-    implementation 'com.facebook.fresco:fresco:1.9.0'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.facebook.fresco:fresco:1.13.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
     // For animated GIF support
     implementation 'com.facebook.fresco:animated-gif:1.9.0'
 
