--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.activities.ApplicationFormActivity"></activity>
         <activity
             android:name=".ui.activities.MainActivity"
             android:label="@string/app_name">
@@ -30,7 +31,7 @@
         <activity
             android:name=".ui.activities.SingUpActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <activity android:name=".ui.activities.DetailComplaintActivity"></activity>
+        <activity android:name=".ui.activities.DetailComplaintActivity" />
     </application>
 
 </manifest>
